--- a/client/src/components/room/Room.css
+++ b/client/src/components/room/Room.css
@@ -7,5 +7,22 @@
 video {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
+  background-color: #333;
+  border: 2px solid #111;
+}
+.userNames {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  color: #fff;
+}
+.videos-div {
+  position: relative;
+}
+.actions-btns h2 {
+  color: rgba(78, 196, 131, 0.678);
+  font-size: 16;
+}
+.actions-btns button {
 }
