update components style with styled-conponents

--- a/client/src/components/chat/Messages.css
+++ b/client/src/components/chat/Messages.css
@@ -1,8 +1,7 @@
-.messages {
+/* .messages {
   max-width: 678px;
-  /* margin: 10px; */
   scroll-behavior: smooth;
-}
+} */
 .message_content i {
   font-size: 0.8rem;
   margin: 0 15px;
